{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 32,
  "lineage": "98a3c9f5-92e4-090e-1cf9-a732f16ebe8c",
  "resources": [
    {
      "module": "module.autoscaling.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:loadbalancer/app/bai3-kiem-tra/b95401a56b7a6f36",
            "arn_suffix": "app/bai3-kiem-tra/b95401a56b7a6f36",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bai3-kiem-tra-880671534.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:loadbalancer/app/bai3-kiem-tra/b95401a56b7a6f36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bai3-kiem-tra",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0730269b03310257f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0684f7d7280563a1c"
              },
              {
                "subnet_id": "subnet-070d3afab07abde1e"
              },
              {
                "subnet_id": "subnet-0e111db392295753f"
              }
            ],
            "subnets": [
              "subnet-0684f7d7280563a1c",
              "subnet-070d3afab07abde1e",
              "subnet-0e111db392295753f"
            ],
            "tags": {
              "Name": "bai3-kiem-tra"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-072d4ba3038c171fe",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:listener/app/bai3-kiem-tra/b95401a56b7a6f36/6648b3aeb3856b99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:targetgroup/web20221005050937572000000009/e57a62f006144e5b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:listener/app/bai3-kiem-tra/b95401a56b7a6f36/6648b3aeb3856b99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:loadbalancer/app/bai3-kiem-tra/b95401a56b7a6f36",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.module.alb.aws_lb.this",
            "module.autoscaling.module.alb.aws_lb_target_group.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:targetgroup/web20221005050937572000000009/e57a62f006144e5b",
            "arn_suffix": "targetgroup/web20221005050937572000000009/e57a62f006144e5b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:269088674837:targetgroup/web20221005050937572000000009/e57a62f006144e5b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web20221005050937572000000009",
            "name_prefix": "web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "target_type": "instance",
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:security-group/sg-00e4013f4d5c0a0a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e4013f4d5c0a0a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074ace22d6269be04"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20221005050621680800000006",
            "name_prefix": "terraform-",
            "owner_id": "269088674837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:security-group/sg-0730269b03310257f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0730269b03310257f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20221005050617401500000002",
            "name_prefix": "terraform-",
            "owner_id": "269088674837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0af3d76ecf43fcb",
            "domain": "vpc",
            "id": "eipalloc-0e0af3d76ecf43fcb",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-228-199-238.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.199.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-ap-southeast-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:internet-gateway/igw-0ca301052c957f22b",
            "id": "igw-0ca301052c957f22b",
            "owner_id": "269088674837",
            "tags": {
              "Name": "bai3-kiem-tra-vpc"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0af3d76ecf43fcb",
            "connectivity_type": "public",
            "id": "nat-0a939f9cdd97ce9cc",
            "network_interface_id": "eni-00032c2aa2b04e227",
            "private_ip": "10.0.4.96",
            "public_ip": "13.228.199.238",
            "subnet_id": "subnet-070d3afab07abde1e",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-ap-southeast-1a"
            }
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0abd090a7d03bc28d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a939f9cdd97ce9cc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0abd090a7d03bc28d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca301052c957f22b",
            "id": "r-rtb-05bba86b16b5c2c591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bba86b16b5c2c59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:route-table/rtb-0abd090a7d03bc28d",
            "id": "rtb-0abd090a7d03bc28d",
            "owner_id": "269088674837",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bai3-kiem-tra-vpc-private"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:route-table/rtb-05bba86b16b5c2c59",
            "id": "rtb-05bba86b16b5c2c59",
            "owner_id": "269088674837",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bai3-kiem-tra-vpc-public"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a58a8d8bdca3e16f",
            "route_table_id": "rtb-0abd090a7d03bc28d",
            "subnet_id": "subnet-030287ef9ab1d4f50"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8ac26e3d1b33810",
            "route_table_id": "rtb-0abd090a7d03bc28d",
            "subnet_id": "subnet-09da4c27f798f9229"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f198fca32bce0a3f",
            "route_table_id": "rtb-0abd090a7d03bc28d",
            "subnet_id": "subnet-026eba3fd1c9373a8"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a0bb8524345aecf",
            "route_table_id": "rtb-05bba86b16b5c2c59",
            "subnet_id": "subnet-070d3afab07abde1e"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0595f0b80c200e3b9",
            "route_table_id": "rtb-05bba86b16b5c2c59",
            "subnet_id": "subnet-0684f7d7280563a1c"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d033ccbc66c2451",
            "route_table_id": "rtb-05bba86b16b5c2c59",
            "subnet_id": "subnet-0e111db392295753f"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:subnet/subnet-030287ef9ab1d4f50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030287ef9ab1d4f50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269088674837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-private-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:subnet/subnet-09da4c27f798f9229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09da4c27f798f9229",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269088674837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-private-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:subnet/subnet-026eba3fd1c9373a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026eba3fd1c9373a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269088674837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-private-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-private-ap-southeast-1c"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:subnet/subnet-070d3afab07abde1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070d3afab07abde1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "269088674837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-public-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-public-ap-southeast-1a"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:subnet/subnet-0684f7d7280563a1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0684f7d7280563a1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "269088674837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-public-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-public-ap-southeast-1b"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:subnet/subnet-0e111db392295753f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e111db392295753f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "269088674837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bai3-kiem-tra-vpc-public-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc-public-ap-southeast-1c"
            },
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:vpc/vpc-072d4ba3038c171fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002a88aeec02fb36e",
            "default_route_table_id": "rtb-003ad6a1a23b95621",
            "default_security_group_id": "sg-0a3d1834da6b1c5b7",
            "dhcp_options_id": "dopt-09e603b5edd47eb55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-072d4ba3038c171fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003ad6a1a23b95621",
            "owner_id": "269088674837",
            "tags": {
              "Name": "bai3-kiem-tra-vpc"
            },
            "tags_all": {
              "Name": "bai3-kiem-tra-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:269088674837:security-group/sg-074ace22d6269be04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074ace22d6269be04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0730269b03310257f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221005050619615300000005",
            "name_prefix": "terraform-",
            "owner_id": "269088674837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072d4ba3038c171fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}